kubernetes/db-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: db
  namespace: dogshelter
spec:
  serviceName: db
  replicas: 1
  selector:
    matchLabels:
      db: dogshelter-db
  template:
    metadata:
      labels:
        db: dogshelter-db
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: db-data
              mountPath: /var/lib/postgresql/data

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $POSTGRES_USER -d $DB_NAME
            initialDelaySeconds: 20
            periodSeconds: 10

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U $POSTGRES_USER -d $DB_NAME
            initialDelaySeconds: 30
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3

  volumeClaimTemplates:
    - metadata:
        name: db-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
