kubernetes/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: dogshelter
spec:
  type: ClusterIP
  selector:
    app: dogshelter-app
  ports:
    - port: 80
      targetPort: 8080
