kubernetes/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: dogshelter
spec:
  clusterIP: None
  selector:
    db: dogshelter-db
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
