kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dogshelter-ingress
  namespace: dogshelter
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: dogshelter.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80

    - host: pgadmin.dogshelter.local
      http:
        paths:
            - path: /
              pathType: Prefix
              backend:
                service:
                  name: pgadmin
                  port:
                    name: http
